--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@import './styles/colors';
+@import './styles/variables';
+@import './styles/mixins';
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Raleway&display=swap');
+@import '@fortawesome/fontawesome-free/css/all.css';
